--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc -w",
     "start": "node build/app.ts",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.ts\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\""
   },
   "keywords": [],
   "author": "",
